--- a/themes/custom/upscwala/sass/components/_branding.scss
+++ b/themes/custom/upscwala/sass/components/_branding.scss
@@ -16,3 +16,9 @@ div.site-branding a.logo {
   float: left;
   margin-bottom: 5px;
 }
+
+.ui-dialog-titlebar {
+  float: right;
+  background: none;
+  border: none;
+}
