--- a/themes/custom/upscwala/sass/_config.scss
+++ b/themes/custom/upscwala/sass/_config.scss
@@ -7,6 +7,8 @@ $white: #fff;
 $red: #ee696c;
 $yellow: #Ffae01;
 $brickbrown: #5a0908;
+$dark-blue: #0c1023;
+$mirage: #141d29;
 // b&w colors as placeholders
 $blk: #000;
 $dark-gray: lighten($blk, 20%);
@@ -58,18 +60,9 @@ body {
   background: rgba($r, $g, $b, $pertc);
 }
 
-@mixin region-spacer($color, $direction: bottom) {
-  border-top: 1px dotted $color;
-
-  @if $direction == top {
-    padding-top: 25px;
-    margin-top: 25px;
-  }
-
-  @else {
-    padding-bottom: 25px;
-    margin-bottom: 25px;
-  }
+@mixin region-spacer($color) {
+  background: $color;
+  padding: 30px;
 }
 
 @mixin borderradius($px: 5px) {
