--- a/themes/custom/upscwala/sass/components/_views.scss
+++ b/themes/custom/upscwala/sass/components/_views.scss
@@ -1,4 +1,4 @@
-.view-taxonomy-term {
+.view-page-list {
   .views-row {
     padding: 15px 0;
     border-bottom: 1px solid #a2aeae;
@@ -12,6 +12,21 @@
   .views-field-title {
     a {
       font-size: 1.5rem;
+    }
+  }
+
+  .views-exposed-form {
+    .form-item {
+      display: inline-block;
+      margin-right: 20px;
+    }
+  }
+}
+
+#fancy_login_form_contents {
+  .social-auth {
+    .auth-icon {
+      width: 50px;
     }
   }
 }
