--- a/themes/custom/upscwala/templates/layout/page--front.html.twig
+++ b/themes/custom/upscwala/templates/layout/page--front.html.twig
@@ -51,7 +51,7 @@
   <!-- ______________________ MAIN _______________________ -->
 
   <div class="clearfix" id="main">
-    <div class="cog--mq mq-main panel-cog-layout-one-two-one-cl">
+    <div class="cog--mq mq-main">
 
       {% if page.sidebar_first %}
         <aside class="sidebar-first sidebars" id="sidebar-first">
@@ -60,7 +60,7 @@
       {% endif %}
       <!-- /sidebar-first -->
 
-      <section id="content" class="cog-layout--middle-left">
+      <section id="content">
 
         {% if breadcrumb or title or messages or tabs or action_links %}
           <div id="content-header">
@@ -103,7 +103,7 @@
       <!-- /content-inner /content -->
 
       {% if page.sidebar_second %}
-        <aside class="sidebar-second sidebars cog-layout--middle-right" id="sidebar-second">
+        <aside class="sidebar-second sidebars" id="sidebar-second">
           {{ page.sidebar_second }}
         </aside>
       {% endif %}
