Add login register form in quiz, make content access private.

--- a/themes/custom/upscwala/sass/_config.scss
+++ b/themes/custom/upscwala/sass/_config.scss
@@ -111,11 +111,12 @@ body {
 }
 
 .blocked-style {
-  border: 1px solid $white;
-  padding: 12px;
-  border-radius: 5px;
+  padding: 20px;
   background: $off-white;
-
-  @extend .tmp-shadow;
 }
 
+.item-list {
+  ul {
+    list-style-type: none;
+  }
+}
