--- a/themes/custom/upscwala/templates/menu/responsive-menu-horizontal.html.twig
+++ b/themes/custom/upscwala/templates/menu/responsive-menu-horizontal.html.twig
@@ -38,6 +38,7 @@
       {%
         set classes = [
           'menu-item',
+          'col-elem-2',
           item.is_expanded ? 'menu-item--expanded',
           item.is_collapsed ? 'menu-item--collapsed',
           item.in_active_trail ? 'menu-item--active-trail',
